<resources>
    <string name="app_name">Smart Blasting Drilling</string>
    <string name="install">Install</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="retry">Retry</string>
    <string name="something_wrong">The connection to the server was lost. Please try again</string>
    <string name="no">No</string>
    <string name="ok">Ok</string>
    <string name="do_you_want_to_logout">Do You Want To Logout</string>
    <string name="log_in_to_continue">Log In To Continue</string>
    <string name="password">Password</string>
    <string name="enter_user_name">Enter User Name</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">login</string>
    <string name="home">home</string>
    <string name="enter_email">Please Enter Username</string>
    <string name="enter_email_valid">Please Enter Valid Email</string>
    <string name="please_enter_password">Please Enter Your Password</string>
    <string name="pass_six_greater">Password must be greater than 6 character</string>
    <string name="enteremail">Enter Username</string>
    <string name="design">Design</string>
    <string name="drilling">Drilling</string>
    <string name="blasting">Blasting</string>
    <string name="search">Search</string>
    <string name="abc">abc</string>
    <string name="project_name_with_star"><font color='#CC252C'>*</font>Project Name</string>
    <string name="project_name">Project Name</string>
    <string name="mine">Mine :</string>
    <string name="mine_1">Mine 1</string>
    <string name="pit_1">Pit 1</string>
    <string name="status">Status :</string>
    <string name="created">Created</string>
    <string name="created_on">Created On :</string>
    <string name="dateval23">01/01/23</string>
    <string name="pit">Pit :</string>
    <string name="zone">Zone :</string>
    <string name="zone_1">Zone 1</string>
    <string name="bench">Bench :</string>
    <string name="bench_1">Bench 1</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="go">GO</string>
    <string name="hole_details">Hole Details</string>
    <string name="project_list">Project List</string>
    <string name="hole_id">Hole Id</string>
    <string name="raw_id">Row Id</string>
    <string name="hole_no">Hole No.</string>
    <string name="burden">Burden</string>
    <string name="spacing">Spacing</string>
    <string name="hole_dia">Hole Dia</string>
    <string name="hole_angle">Hole Angle</string>
    <string name="hole_depth">Hole Depth</string>
    <string name="sub_grade">Subgrade</string>
    <string name="more">More</string>
    <string name="pro_title_list">Project List</string>
    <string name="hole_detail">Hole Detail </string>
    <string name="project_info">Project Info</string>
    <string name="star">\u2605</string>
    <string name="site_name"><font color='#CC252C'>*</font>Site Name</string>
    <string name="select_team"><font color='#CC252C'>*</font>Select Team</string>
    <string name="rig"><font color='#CC252C'>*</font>Rig</string>
    <string name="mine_as"><font color='#CC252C'>*</font>Mine</string>
    <string name="pit_as"><font color='#CC252C'>*</font>Pit</string>
    <string name="bench_as"><font color='#CC252C'>*</font>Bench</string>
    <string name="zone_as"><font color='#CC252C'>*</font>Zone</string>
    <string name="explosive_as"><font color='#CC252C'>*</font>Explosive</string>
    <string name="rock_as"><font color='#CC252C'>*</font>Rock</string>
    <string name="drilling_pattern"><font color='#CC252C'>*</font>Drilling Pattern</string>
    <string name="drilling_type"><font color='#CC252C'>*</font>Drilling Type</string>
    <string name="matterial_drilled"><font color='#CC252C'>*</font>Material Drilled</string>
    <string name="client_name">Client Name</string>
    <string name="project_number">Project Number</string>
    <string name="project_status"><font color='#CC252C'>*</font>Project Status</string>
    <string name="hole_status">Hole Status</string>
    <string name="name">Name</string>
    <string name="deviation">Deviation</string>
    <string name="save_and_proceed">Save &amp; Proceed</string>
    <string name="start_time"><font color='#CC252C'>*</font>Start Time</string>
    <string name="start_date"><font color='#CC252C'>*</font>Start Date</string>
    <string name="end_date"><font color='#CC252C'>*</font>End Date</string>
    <string name="end_time"><font color='#CC252C'>*</font>End Time</string>
    <string name="open">Open</string>
    <string name="enable_gps">Enable GPS</string>
    <string name="required_for_this_app">Require for this app</string>
    <string name="enable_now">Enable now</string>
    <string name="signup_here">Register Here</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_emailr">Enter Email</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="enter_company">Enter Company</string>
    <string name="select_country">Select Country</string>
    <string name="enter_comment">Enter Comment</string>
    <string name="i_don_t_have_an_account_create">I don\'t have an account? Create</string>
    <string name="entername">Please Enter Name</string>
    <string name="enter_emai">Please Enter Email</string>
    <string name="enter_number">Please Enter Number</string>
    <string name="entercompany">Please Enter Company Name</string>
    <string name="entercomment">Please Enter Comment</string>
    <string name="enter_valid_email">Please Enter Valid Email</string>
    <string name="valid_number">Please Enter Valid Phone Number</string>
    <string name="media">Media</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_from">Choose From Gallery</string>
    <string name="choose_option">Choose Option</string>
    <string name="choose_from_gallery">Choose From Gallery</string>
    <string name="please_provide_camera">Please provide camera permission so that you can …</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="permission">Permissions</string>
    <string name="camera_permission">Camera Permission</string>
    <string name="start_camera_failed">Failed Open Camera</string>
    <string name="cancel">Cancel</string>
    <string name="please_select_2mb_size">Please select file less than 2 mb!</string>
    <string name="no_image_found">No Image Available</string>
    <string name="click_here">Click here to select image</string>
    <string name="click_here_download">Click on \'Download\' button for new project</string>
    <string name="_3d_blades">3D Blades</string>
    <string name="_2022_01_04">2022/01/04</string>
    <string name="save">Save</string>
    <string name="choose_fields">Choose Fields</string>
    <string name="flyrocks">Flyrocks</string>
    <string name="performance">Performance</string>
    <string name="displacement">Displacement</string>
    <string name="blasting_fumes">Blasting Fumes</string>
    <string name="not">NO</string>
    <string name="muck_profile">Muck Profile</string>
    <string name="scattered">Staggered</string>
    <string name="heave_swell">Heave/Swell</string>
    <string name="good">Good</string>
    <string name="stemming_ejection">Stemming Ejection</string>
    <string name="backbreak_overbreak">BackBreak/OverBreak</string>
    <string name="backbreak">BackBreak</string>
    <string name="bounder_count">Boulder Count</string>
    <string name="error_insertion">Error In Insertion</string>
    <string name="project_details">Project Details</string>
    <string name="hole_detai">Hole Details</string>
    <string name="gallery">Gallery</string>
    <string name="blast_performance">Blast Performance</string>
    <string name="switch_project">Switch Project</string>
    <string name="logout">Logout</string>
    <string name="edit_field">Edit field</string>
    <string name="no_project_downloaded">No project downloaded</string>
    <string name="save_proceed"><![CDATA[Save & Proceed]]></string>
    <string name="hole_parameters">Hole Parameters</string>
    <string name="please_select_country">Please Select Your Country</string>
    <string name="please_enter_comment">Please Enter Comment</string>
    <string name="error">Error</string>
    <string name="take_video">Take Video</string>
    <string name="no_hole_detail_found">No Hole Detail Found</string>
    <string name="charging">Charging</string>
    <string name="charging_param">Charging Parameters</string>
    <string name="column">Column Name</string>
    <string name="column_length">Column Length</string>
    <string name="column_weight">Column Weight</string>
    <string name="bottom">Bottom Name</string>
    <string name="bottom_length">Bottom Length</string>
    <string name="bottom_weight">Bottom Weight</string>
    <string name="buster_weight">Buster weight</string>
    <string name="buster_length">Buster Length</string>
    <string name="buster">Buster name</string>
    <string name="stem">Stem Name</string>
    <string name="diameter">Diameter</string>
    <string name="x">X</string>
    <string name="y">Y</string>
    <string name="z">Z</string>
    <string name="top_x">Top X</string>
    <string name="top_y">Top Y</string>
    <string name="top_z">Top Z</string>
    <string name="bottom_x">Bottom X</string>
    <string name="bottom_y">Bottom Y</string>
    <string name="bottom_z">Bottom Z</string>
    <string name="stem_length">Stem Length</string>
    <string name="electronic_electric_detonator">Electronic/Electric Detonator</string>
    <string name="initiating_device">Initiating Device</string>
    <string name="unit_cost">Unit Cost</string>
    <string name="quantity">Quantity</string>
    <string name="down_the_hole">Down The Hole</string>
    <string name="tld_row_to_row">TLD(Row To Row)</string>
    <string name="tld_hole_to_hole">TLD(Hole To Hole)</string>
    <string name="sync_with_drims">Sync with DRIMS</string>
    <string name="sync_with_bims">Sync With BIMS</string>
    <string name="sync_with_blades">Sync with BLADES</string>
    <string name="yes">Yes</string>
    <string name="completed">Completed</string>
    <string name="blocked">Blocked</string>
    <string name="progress">In Progress</string>
    <string name="vertical_dip">Vertical Dip</string>
    <string name="water_depth">Water Depth</string>
    <string name="subgrade">Subgrade</string>
    <string name="total_charge">Total Charge</string>
    <string name="charge_length">Charge Length</string>
    <string name="stemming_length">Stemming Length</string>
    <string name="deck_length">Deck Length</string>
    <string name="block">Block</string>
    <string name="block_length">Block Length</string>
    <string name="hole_delay">Hole Delay</string>
    <string name="in_hole_delay">In Hole Delay</string>
    <string name="type">Type</string>
    <string name="length">Length</string>
    <string name="weight">Weight</string>
    <string name="explosive">Explosive</string>
    <string name="cost">Cost</string>
    <string name="choose_hole_status">Choose Hole Status</string>
    <string name="select_shift"><font color='#CC252C'>*</font>Select Shift</string>
    <string name="select_driller"><font color='#CC252C'>*</font>Select Driller</string>
    <string name="drill_method"><font color='#CC252C'>*</font>Drill Method</string>
    <string name="hole_name">Hole Name</string>
    <string name="charging_added_msg">Charging added successfully</string>
    <string name="request_access">Request Access</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_company_name">Enter company name</string>
    <string name="enter_country_name">Enter Country Name</string>
    <string name="send_request">Send Request</string>
    <string name="change_length">Change Length</string>
    <string name="hole_type">Hole Type</string>
    <string name="top_easting">Top Easting</string>
</resources>