<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_5sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:background="@drawable/white_20r_bg"
        android:elevation="@dimen/_2sdp"
        android:padding="@dimen/_10sdp">
        <TextView
            android:id="@+id/titleNameTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:padding="@dimen/_1sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:fontFamily="@font/oxygen_bold"
            android:text="@string/project_name"
            android:textColor="@color/black"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
<!--

        <TextView
            android:id="@+id/projectNameTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/_1sdp"
            android:fontFamily="@font/oxygen_regular"
            android:text="@string/project_name"
            android:textColor="@color/grey"
            android:layout_marginStart="@dimen/_2sdp"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintBottom_toBottomOf="@+id/titleNameTv"
            app:layout_constraintStart_toEndOf="@+id/titleNameTv"
            app:layout_constraintTop_toTopOf="@+id/titleNameTv"
            />
-->



        <TextView
            android:id="@+id/titleMineTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/_1sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:fontFamily="@font/oxygen_bold"
            android:text="@string/mine"
            android:textColor="@color/black"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintStart_toStartOf="@id/titleNameTv"
           app:layout_constraintTop_toBottomOf="@+id/titleNameTv" />

        <TextView
            android:id="@+id/MinevalTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/_1sdp"
            android:fontFamily="@font/oxygen_regular"
            android:text="@string/mine_1"
            android:textColor="@color/grey"
            android:layout_marginStart="@dimen/_2sdp"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintBottom_toBottomOf="@+id/titleMineTv"
            app:layout_constraintStart_toEndOf="@+id/titleMineTv"
            app:layout_constraintTop_toTopOf="@+id/titleMineTv"
            />




        <TextView
            android:id="@+id/titleStatusTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/_1sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:fontFamily="@font/oxygen_bold"
            android:text="@string/status"
            android:textColor="@color/black"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintStart_toStartOf="@id/titleMineTv"
            app:layout_constraintTop_toBottomOf="@+id/titleMineTv" />

        <TextView
            android:id="@+id/StatusTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/_1sdp"
            android:fontFamily="@font/oxygen_regular"
            android:text="@string/created"
            android:textColor="@color/grey"
            android:layout_marginStart="@dimen/_2sdp"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintBottom_toBottomOf="@+id/titleStatusTv"
            app:layout_constraintStart_toEndOf="@+id/titleStatusTv"
            app:layout_constraintTop_toTopOf="@+id/titleStatusTv"
            />



        <TextView
            android:id="@+id/titlePitTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/oxygen_bold"
            android:padding="@dimen/_1sdp"
            android:text="@string/pit"
            android:textColor="@color/black"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintBottom_toBottomOf="@+id/pit"
            app:layout_constraintEnd_toStartOf="@+id/pit"
            app:layout_constraintTop_toTopOf="@+id/pit"
            android:layout_marginRight="@dimen/_1sdp"/>

        <TextView
            android:id="@+id/pit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/oxygen_regular"
            android:padding="@dimen/_1sdp"
            android:text="@string/pit_1"
            android:textColor="@color/grey"
            android:textSize="@dimen/_10ssp"
        app:layout_constraintTop_toBottomOf="@+id/titleNameTv"
            app:layout_constraintEnd_toEndOf="parent"/>


        <TextView
            android:id="@+id/CreatedDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/oxygen_bold"
            android:padding="@dimen/_1sdp"
            android:text="@string/created_on"
            android:textColor="@color/black"
            android:textSize="@dimen/_10ssp"
       app:layout_constraintEnd_toStartOf="@id/CreatedDateval"
            app:layout_constraintBottom_toBottomOf="@+id/CreatedDateval"
            app:layout_constraintTop_toTopOf="@+id/CreatedDateval"
            android:layout_marginRight="@dimen/_1sdp"/>

        <TextView
            android:id="@+id/CreatedDateval"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/oxygen_regular"
            android:padding="@dimen/_1sdp"
            android:text="@string/dateval23"
            android:textColor="@color/grey"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>