<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/_FFA722">

   <!-- <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/white_20r_bg"
        android:padding="@dimen/_2sdp">-->


    <TextView
            android:id="@+id/titleNameTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:fontFamily="@font/oxygen_bold"
            android:text="@string/project_name"
            android:textColor="@color/black"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <!-- <TextView
             android:id="@+id/titleMineTv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="@dimen/_1sdp"
             android:layout_marginTop="@dimen/_5sdp"
             android:fontFamily="@font/oxygen_bold"
             android:text="@string/mine"
             android:textColor="@color/black"
             android:textSize="@dimen/_10ssp"
             app:layout_constraintStart_toStartOf="@id/titleNameTv"
             app:layout_constraintTop_toBottomOf="@+id/titleNameTv" />

         <TextView
             android:id="@+id/MinevalTv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="@dimen/_1sdp"
             android:fontFamily="@font/oxygen_regular"
             android:text="@string/mine_1"
             android:textColor="@color/grey"
             android:layout_marginStart="@dimen/_2sdp"
             android:textSize="@dimen/_10ssp"
             app:layout_constraintBottom_toBottomOf="@+id/titleMineTv"
             app:layout_constraintStart_toEndOf="@+id/titleMineTv"
             app:layout_constraintTop_toTopOf="@+id/titleMineTv"
             />
 -->


        <TextView
            android:id="@+id/titleStatusTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:fontFamily="@font/oxygen_bold"
            android:text="@string/status"
            android:textColor="@color/black"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintEnd_toStartOf="@+id/StatusTv"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/StatusTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_2sdp"
            android:fontFamily="@font/oxygen_regular"
            android:text="@string/created"
            android:textColor="@color/black"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintBottom_toBottomOf="@+id/titleStatusTv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/titleStatusTv" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/mine_lay"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@+id/pit_lay"
            app:layout_constraintStart_toStartOf="@+id/titleNameTv"
            app:layout_constraintTop_toBottomOf="@+id/titleNameTv"
            android:layout_marginTop="@dimen/_5sdp">

            <TextView
                android:id="@+id/titleMineTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/oxygen_bold"
                android:text="@string/mine"
                android:textColor="@color/black"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/MinevalTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_2sdp"
                android:fontFamily="@font/oxygen_regular"
                android:text="@string/mine_1"
                android:textColor="@color/black"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintBottom_toBottomOf="@+id/titleMineTv"
                app:layout_constraintStart_toEndOf="@+id/titleMineTv"
                app:layout_constraintTop_toTopOf="@+id/titleMineTv" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/pit_lay"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/mine_lay"
            app:layout_constraintEnd_toStartOf="@+id/zone_lay"
            app:layout_constraintStart_toEndOf="@+id/mine_lay"
            app:layout_constraintTop_toTopOf="@id/mine_lay">

            <TextView
                android:id="@+id/titlePitTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:fontFamily="@font/oxygen_bold"
                android:text="@string/pit"
                android:textColor="@color/black"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
              />

            <TextView
                android:id="@+id/pit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/oxygen_regular"
                android:gravity="center_vertical"
                android:text="@string/pit_1"
                android:textColor="@color/black"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintBottom_toBottomOf="@+id/titlePitTv"
                app:layout_constraintStart_toEndOf="@+id/titlePitTv"
                app:layout_constraintTop_toTopOf="@+id/titlePitTv" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/zone_lay"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/pit_lay"
            app:layout_constraintEnd_toStartOf="@+id/bench_lay"
            app:layout_constraintStart_toEndOf="@+id/pit_lay"
            app:layout_constraintTop_toTopOf="@+id/pit_lay">

            <TextView
                android:id="@+id/titlezoneTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:fontFamily="@font/oxygen_bold"
                android:text="@string/zone"
                android:textColor="@color/black"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/zone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/oxygen_regular"
                android:text="@string/zone_1"
                android:textColor="@color/black"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintBottom_toBottomOf="@+id/titlezoneTv"
                app:layout_constraintStart_toEndOf="@+id/titlezoneTv"
                app:layout_constraintTop_toTopOf="@+id/titlezoneTv" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/bench_lay"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/zone_lay"
            app:layout_constraintEnd_toStartOf="@+id/created_lay"
            app:layout_constraintStart_toEndOf="@+id/zone_lay"
            app:layout_constraintTop_toTopOf="@+id/zone_lay">

            <TextView
                android:id="@+id/titleBenchTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:fontFamily="@font/oxygen_bold"
                android:text="@string/bench"
                android:textColor="@color/black"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintEnd_toStartOf="@+id/Bench"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/Bench"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/oxygen_regular"
                android:text="@string/bench_1"
                android:textColor="@color/black"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintStart_toEndOf="@+id/titleBenchTv"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/created_lay"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/bench_lay"
            app:layout_constraintEnd_toEndOf="@+id/StatusTv"
            app:layout_constraintTop_toTopOf="@+id/bench_lay">

            <TextView
                android:id="@+id/CreatedDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/_1sdp"
                android:fontFamily="@font/oxygen_bold"
                android:padding="@dimen/_1sdp"
                android:text="@string/created_on"
                android:textColor="@color/black"
                android:textSize="@dimen/_10ssp"
             app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/CreatedDateval"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/oxygen_regular"
                android:padding="@dimen/_1sdp"
                android:text="@string/dateval23"
                android:textColor="@color/black"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintLeft_toRightOf="@+id/CreatedDate"
                app:layout_constraintTop_toTopOf="parent"

                />


        </androidx.constraintlayout.widget.ConstraintLayout>


        <!--        <TextView
                    android:id="@+id/titlePitTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/oxygen_bold"
                    android:padding="@dimen/_1sdp"
                    android:text="@string/pit"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_10ssp"
                    app:layout_constraintBottom_toBottomOf="@+id/pit"
                    app:layout_constraintEnd_toStartOf="@+id/pit"
                    app:layout_constraintTop_toTopOf="@+id/pit"
                    android:layout_marginRight="@dimen/_1sdp"/>

                <TextView
                    android:id="@+id/pit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/oxygen_regular"
                    android:padding="@dimen/_1sdp"
                    android:text="@string/pit_1"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/_10ssp"
                    app:layout_constraintTop_toBottomOf="@+id/titleNameTv"
                    app:layout_constraintEnd_toEndOf="parent"/>-->


        <!--<TextView
            android:id="@+id/CreatedDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/oxygen_bold"
            android:padding="@dimen/_1sdp"
            android:text="@string/created_on"
            android:textColor="@color/black"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintEnd_toStartOf="@id/CreatedDateval"
            app:layout_constraintBottom_toBottomOf="@+id/CreatedDateval"
            app:layout_constraintTop_toTopOf="@+id/CreatedDateval"
            android:layout_marginRight="@dimen/_1sdp"/>

        <TextView
            android:id="@+id/CreatedDateval"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/oxygen_regular"
            android:padding="@dimen/_1sdp"
            android:text="@string/dateval23"
            android:textColor="@color/grey"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>-->


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>